--- a/src/index.styl
+++ b/src/index.styl
@@ -11,6 +11,7 @@ body
   width 100%
   min-height 100vh
   display flex
+  flex-direction column
   .page-table
     flex 1
     display flex
@@ -21,18 +22,27 @@ body
     flex-direction column
     align-items center
     justify-content center
+    padding-top 30px
+    font-size 2em
 #buttons-wrap
   display flex
   align-items center
   justify-content center
   flex-wrap wrap
-  padding .5em
-  width 600px
-  height 600px
+  width 500px
+  height 500px
   background blue
-  button
-    width calc(600px / 10)
-    height calc(600px / 10)
+  padding .5em
+  .number
+    width calc(500px / 10)
+    height calc(500px / 10)
+    text-align center
+    display inline-block
+    box-sizing border-box
+    padding 0
+
+#instructions
+  text-align center
 
 
 .correct
