--- a/src/index.styl
+++ b/src/index.styl
@@ -20,8 +20,8 @@ body
     display flex
     align-items center
     justify-content center
-  .page-menu
-    display flex
+  #page-menu
+    display none
     flex-direction column
     align-items center
     justify-content center
@@ -43,6 +43,10 @@ body
     display inline-block
     box-sizing border-box
     padding 0
+    cursor pointer
+    background-color #1497D0
+    color #fff
+    border 1px solid #16497D
 
 #instructions
   text-align center
@@ -72,7 +76,7 @@ body
   padding 10px
   text-align center
 .correct
-  background-color green
+  background-color #16497D !important
   color #fff
 
 
